# klip

./: .clippy.toml  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .ignore  Cargo.toml  Cross.toml  Dockerfile  Justfile  README.md  build.rs  default.nix  docker-bake.hcl  docker-compose.yml  ecosystem.config.js  flake.nix  rustfmt.toml  shell.nix  test.sh  zigbuild.txt
.cargo/: config.toml
aliases/: klip.zsh
aliases/fish/: klc.fish  klf.fish  klfr.fish  klm.fish  klo.fish  klp.fish  klpr.fish  klz.fish
ci/: build-and-publish-m2  check-banned-words
cli/: Cargo.toml
cli/src/: lib.rs
completions/: _klip  _klip.ps1  klip.bash
crypto/blake2b/: Cargo.toml
crypto/blake2b/src/: avx2.rs  core.rs  lib.rs  portable.rs  traits.rs  utils.rs
crypto/blake2b/src/simd/: mod.rs  ops.rs  opt.rs
crypto/common/: Cargo.toml
crypto/common/src/: blocks.rs  constant_time.rs  lib.rs
crypto/common/src/erase/: aarch64.rs  mod.rs  x86.rs
crypto/curve25519/: Cargo.toml
crypto/curve25519/macros/: Cargo.toml
crypto/curve25519/macros/src/: lib.rs
crypto/curve25519/macros/tests/: test.rs
crypto/curve25519/src/: consts.rs  lib.rs  report.rs  scalar.rs  window.rs
crypto/curve25519/src/backends/: mod.rs
crypto/curve25519/src/backends/serial/: curve_models.rs  mod.rs
crypto/curve25519/src/backends/serial/scalar_mul/: mod.rs  vartime_double_base.rs
crypto/curve25519/src/backends/serial/u32/: consts.rs  field.rs  mod.rs  scalar.rs
crypto/curve25519/src/backends/serial/u64/: consts.rs  field.rs  scalar.rs
crypto/curve25519/src/backends/vector/: mod.rs  simd.rs
crypto/curve25519/src/backends/vector/avx2/: consts.rs  field.rs  mod.rs
crypto/curve25519/src/backends/vector/ifma/: consts.rs  field.rs  mod.rs
crypto/curve25519/src/backends/vector/scalar_mul/: vartime_double_base.rs
crypto/curve25519/tests/: build_tests.sh
crypto/ed25519/: Cargo.toml
crypto/ed25519/src/: consts.rs  errors.rs  hazmat.rs  lib.rs  sign.rs  signature.rs  verify.rs
crypto/scrypt/: Cargo.toml
crypto/scrypt/src/: hmac.rs  lib.rs  params.rs  pbkdf2.rs  romix.rs  salsa.rs
crypto/sha256/: Cargo.toml
crypto/sha256/src/: aarch64.rs  consts.rs  lib.rs  riscv_zknh.rs  riscv_zknh_compact.rs  riscv_zknh_utils.rs  soft.rs  x86.rs
crypto/sha512/: Cargo.toml
crypto/sha512/src/: aarch64.rs  consts.rs  lib.rs  riscv_zknh.rs  riscv_zknh_compact.rs  riscv_zknh_utils.rs  soft.rs  x86.rs
crypto/target_features/: Cargo.toml
crypto/target_features/src/: aarch64.rs  lib.rs  miri.rs  x86.rs
crypto/xchacha20/: Cargo.toml
crypto/xchacha20/src/: buffer.rs  lib.rs
crypto/xchacha20/src/backends/: avx2.rs  mod.rs  neon.rs  soft.rs  sse2.rs
debhelper/: Cargo.toml
doc/: klip.1
klip/: Cargo.toml  build.rs
klip/completions/: _klip  _klip.ps1  klip.bash  klip.elv  klip.fish
klip/src/: authentication.rs  cli.rs  client.rs  config.rs  error.rs  keygen.rs  main.rs  password.rs  server.rs  state.rs  util.rs
klip/src/cli/flags/: args.rs
lib/platform/: Cargo.toml
lib/platform/src/: lib.rs  tty.rs
lib/platform/src/env/: fallback.rs  mod.rs  unix.rs  windows.rs
lib/platform/src/password/: fallback.rs  mod.rs  unix.rs  windows.rs
lib/platform/src/preflight/: mod.rs  other.rs  windows.rs
pkg/brew/: klip-bin.rb
pkg/debian/: postinst  postrm
pkg/systemd/: klip.service
pkg/windows/: Manifest.xml
src/: authentication.rs  client.rs  error.rs  keygen.rs  main.rs  server.rs  state.rs  util.rs
