[package]
name = "klip"
description = "Copy/paste anything over the network"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"
readme = "README.md"
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b = { version = "0.0.0", path = "../crypto/blake2b", default-features = false }
clap = { version = "4", features = ["wrap_help", "derive"] }
crypto-common = { version = "0.0.0", path = "../crypto/common" }
ed25519 = { version = "0.0.0", path = "../crypto/ed25519" }
parking_lot = "0.12"
platform = { version = "0.0.0", path = "../lib/platform" }
rand_core = { version = "0.6", features = ["getrandom"] }
scrypt = { version = "0.0.0", path = "../crypto/scrypt" }
tokio.workspace = true
toml = { version = "0.8", default-features = false, features = ["parse"] }
xchacha20 = { version = "0.0.0", path = "../crypto/xchacha20" }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
jemallocator = "0.5"

[lints]
workspace = true

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/klip", "usr/bin/", "755"],
  ["../LICENSE", "usr/share/doc/klip/", "644"],
  ["../README.md", "usr/share/doc/klip/README", "644"],
  ["../CHANGELOG.md", "usr/share/doc/klip/CHANGELOG", "644"],
  ["../doc/klip.1", "usr/share/man/man1/klip.1", "644"],
  ["../completions/klip.bash", "usr/share/bash-completion/completions/klip", "644"],
  ["../completions/klip.fish", "usr/share/fish/vendor_completions.d/klip.fish", "644"],
  ["../completions/_klip", "usr/share/zsh/vendor-completions/_klip", "644"],
  ["../completions/klip.elv", "usr/share/elvish/lib/", "644"],
]
extended-description = """\
klip allows you to share arbitrary content between hosts anywhere on the
internet. It works by transferring the content to an intermediary server, which
every client with the correct credentials can query.
"""
