[package]
name = "blake2b"
description = "Pure Rust Blake2b implementation"
version = "0.0.0"
edition = "2021"
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-common = { version = "0.0.0", path = "../common" }

[features]
default = []
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]

[lints]
workspace = true
