[package]
name = "curve25519"
version = "0.0.0"
edition = "2021"
publish.workspace = true
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-common = { version = "0.0.0", path = "../common" }
sha512 = { version = "0.0.0", path = "../sha512" }

[target.'cfg(all(not(curve25519_backend = "serial"), target_arch = "x86_64"))'.dependencies]
macros = { version = "0.0.0", path = "macros" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
target_features = { version = "0.0.0", path = "../target_features" }

[lints]
workspace = true
