[package]
name = "ed25519"
version = "0.0.0"
edition = "2021"
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-common = { version = "0.0.0", path = "../common" }
curve25519 = { version = "0.0.0", path = "../curve25519" }
rand_core = { workspace = true, optional = true }
sha512 = { version = "0.0.0", path = "../sha512" }

[features]
default = ["rand"]
rand = ["rand_core"]

[lints]
workspace = true
