[package]
name = "xchacha20"
version = "0.0.0"
edition = "2021"
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-common = { version = "0.0.0", path = "../common" }
target_features = { version = "0.0.0", path = "../target_features" }

[lints]
workspace = true
