[package]
name = "platform"
edition = "2021"
version = "0.0.0"
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-common = { path = "../../crypto/common" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
